--- a/Codebase/UnipeiApp/Base.lproj/Unipei_Main.storyboard
+++ b/Codebase/UnipeiApp/Base.lproj/Unipei_Main.storyboard
@@ -217,8 +217,8 @@
                                                             <color key="textColor" white="0.0" alpha="0.54000000000000004" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="2015-9-16  18:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kg5-aW-Ofw" userLabel="lblTime">
-                                                            <rect key="frame" x="42" y="18" width="213" height="14"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2015-9-16  18:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kg5-aW-Ofw" userLabel="lblTime">
+                                                            <rect key="frame" x="40" y="18" width="213" height="14"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -664,7 +664,7 @@
                                                 <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             </state>
                                         </button>
-                                        <button opaque="NO" tag="102" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0I8-ro-y70" userLabel="btnRight" customClass="DymVerticalButton">
+                                        <button opaque="NO" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0I8-ro-y70" userLabel="btnRight" customClass="DymVerticalButton">
                                             <rect key="frame" x="250" y="0.0" width="125" height="110"/>
                                             <color key="backgroundColor" red="0.82791695030000001" green="0.87851167929999996" blue="0.84335682649999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <state key="normal">
