--- a/Codebase/UnipeiApp/Base.lproj/Unipei_Main.storyboard
+++ b/Codebase/UnipeiApp/Base.lproj/Unipei_Main.storyboard
@@ -543,27 +543,27 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="115" id="ngC-MJ-Ni1">
-                                        <rect key="frame" x="0.0" y="204" width="375" height="115"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="180" id="ngC-MJ-Ni1">
+                                        <rect key="frame" x="0.0" y="204" width="375" height="180"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ngC-MJ-Ni1" id="dtO-NA-x0T">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="115"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f1x-d5-Xho" customClass="JPSubmitButton">
                                                     <rect key="frame" x="40" y="20" width="295" height="44"/>
-                                                    <color key="backgroundColor" white="0.896484375" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="backgroundColor" red="0.88627450980392153" green="0.88627450980392153" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="1vc-4h-wZR"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                     <state key="normal" title="开始使用">
-                                                        <color key="titleColor" red="0.23788667929999999" green="0.23788667929999999" blue="0.23788667929999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <color key="titleColor" red="0.23921568627450981" green="0.23921568627450981" blue="0.23921568627450981" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleShadowColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                                                     </state>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uMc-uW-5Z0" userLabel="protocolBgView">
-                                                    <rect key="frame" x="68" y="74" width="240" height="40"/>
+                                                    <rect key="frame" x="68" y="128" width="240" height="40"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="点击&quot;开始使用&quot;, 即表示同意" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gon-JC-2HR">
                                                             <rect key="frame" x="0.0" y="13" width="148" height="15"/>
@@ -591,13 +591,26 @@
                                                         <constraint firstAttribute="trailing" secondItem="ZxX-ry-6DI" secondAttribute="trailing" id="z4N-WM-PzE"/>
                                                     </constraints>
                                                 </view>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tu4-qW-vVV" customClass="JPSubmitButton">
+                                                    <rect key="frame" x="40" y="74" width="295" height="44"/>
+                                                    <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                                    <state key="normal" title="申请加入">
+                                                        <color key="titleColor" red="0.23921568627450981" green="0.23921568627450981" blue="0.23921568627450981" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleShadowColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="centerX" secondItem="uMc-uW-5Z0" secondAttribute="centerX" id="2Sj-FU-Tfn"/>
-                                                <constraint firstItem="uMc-uW-5Z0" firstAttribute="top" secondItem="f1x-d5-Xho" secondAttribute="bottom" constant="10" id="HFc-PJ-DET"/>
+                                                <constraint firstItem="Tu4-qW-vVV" firstAttribute="trailing" secondItem="f1x-d5-Xho" secondAttribute="trailing" id="6mX-Tf-pBA"/>
+                                                <constraint firstItem="uMc-uW-5Z0" firstAttribute="top" secondItem="Tu4-qW-vVV" secondAttribute="bottom" constant="10" id="Bxx-0v-kcq"/>
                                                 <constraint firstAttribute="trailing" secondItem="f1x-d5-Xho" secondAttribute="trailing" constant="40" id="ONf-gm-oGH"/>
+                                                <constraint firstItem="Tu4-qW-vVV" firstAttribute="top" secondItem="f1x-d5-Xho" secondAttribute="bottom" constant="10" id="euW-4g-vEc"/>
                                                 <constraint firstItem="f1x-d5-Xho" firstAttribute="top" secondItem="dtO-NA-x0T" secondAttribute="top" constant="20" id="gzf-JI-spZ"/>
+                                                <constraint firstItem="Tu4-qW-vVV" firstAttribute="leading" secondItem="f1x-d5-Xho" secondAttribute="leading" id="pTO-iC-n6a"/>
                                                 <constraint firstItem="f1x-d5-Xho" firstAttribute="leading" secondItem="dtO-NA-x0T" secondAttribute="leading" constant="40" id="tt2-nP-WfW"/>
+                                                <constraint firstItem="Tu4-qW-vVV" firstAttribute="height" secondItem="f1x-d5-Xho" secondAttribute="height" id="u6Y-Yk-bgI"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -615,6 +628,7 @@
                     <connections>
                         <outlet property="btnLogin" destination="f1x-d5-Xho" id="Uzs-I4-HNm"/>
                         <outlet property="btnPeek" destination="hZz-hM-FLH" id="KiP-ES-9hT"/>
+                        <outlet property="btnRegiste" destination="Tu4-qW-vVV" id="4p8-JT-CGu"/>
                         <outlet property="tfPassword" destination="KjM-2N-Z2d" id="dFR-9C-kkF"/>
                         <outlet property="tfUsername" destination="wBP-B0-LDa" id="XWM-lx-ymC"/>
                     </connections>
@@ -699,7 +713,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="由你配手机应用上线通知" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aFh-zB-X7N">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" text="由你配手机应用上线通知" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aFh-zB-X7N">
                                             <rect key="frame" x="16" y="14" width="176" height="19"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
